--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -1,48 +1,94 @@
 .customize-control-kirki-color {
-  input {
-    &[data-type="hue"] {
-      +.iris-strip-horiz {
-        .iris-slider {
-          background-image: -webkit-linear-gradient(left, rgb(255, 0, 0), rgb(255, 127, 0), rgb(255, 255, 0), rgb(128, 255, 0), rgb(0, 255, 0), rgb(0, 255, 128), rgb(0, 255, 255), rgb(0, 127, 255), rgb(0, 0, 255), rgb(127, 0, 255), rgb(255, 0, 255), rgb(255, 0, 128), rgb(255, 0, 0)) !important;
-          widows: 100% !important;
-        }
-      }
-    }
-  }
-
-  .iris-picker .iris-square-handle {
-    z-index: 8;
-  }
-
-  .iris-picker.iris-border {
-    width: 100% !important;
-  }
-
-  .iris-picker-inner {
+  .kirki-color-input-wrapper {
     display: grid;
-    grid-template-columns: 1fr 20px;
-    grid-gap: 7px;
+    grid-template-columns: 45px 1fr auto;
 
-    >* {
-      width: 100% !important;
-      margin-left: 0 !important;
-      margin-right: 0 !important;
+    input {
+      width: 100%;
+      font-family: monospace;
     }
-  }
 
-  .kirki-input-container {
-    &[data-has-alpha=true] {
-      .iris-picker-inner {
-        grid-template-columns: 1fr 20px 20px;
+    .toggle-colorpicker {
+      display: block;
+      border: 1px solid rgba(0, 0, 0, .2);
+      border-radius: 50%;
+      padding: 0;
+      width: 35px;
+      height: 35px;
+      box-sizing: border-box;
+      position: relative;
+      overflow: hidden;
+      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+
+      .placeholder {
+        display: block;
+        width: 100%;
+        height: 100%;
+        z-index: 2;
+        position: absolute;
+        top: 0;
+        left: 0;
+      }
+
+      &:before {
+        content: "";
+        display: block;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: #eee;
+        background-image: linear-gradient(45deg, #ccc 25%, transparent 25%, transparent 75%, #ccc 75%, #ccc), linear-gradient(45deg, #ccc 25%, transparent 25%, transparent 75%, #ccc 75%, #ccc);
+        background-size: 14px 14px;
+        background-position: 0 0, 7px 7px;
+        z-index: 1;
+      }
+    }
+
+    &.collapsed:not(.mode-hue) {
+
+      ~.kirki-colorpicker-wrapper-palette,
+      ~.kirki-colorpicker-wrapper-palette~.kirki-colorpicker-wrapper,
+      ~.kirki-colorpicker-wrapper {
+        display: none;
+      }
+
+      .reset {
+        display: none;
+      }
+
+      input {
+        background: none;
+        border: none;
+        box-shadow: none;
+        opacity: .5;
+      }
+    }
+
+    &.mode-hue {
+
+      .toggle-colorpicker,
+      input,
+      .reset {
+        display: none;
       }
     }
   }
 
-  .iris-only-strip {
-    width: 100% !important;
+  .kirki-colorpicker-wrapper-palette {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, 18px);
+    grid-gap: 2px;
 
-    .iris-picker-inner {
-      grid-template-columns: 1fr;
+    button {
+      width: 18px;
+      height: 18px;
+      border-radius: 50%;
+      line-height: 0;
+      display: block;
+      border: 1px solid rgba(0, 0, 0, .2);
+      box-shadow: none;
     }
   }
 }
