--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -38,6 +38,7 @@
       z-index: 1; }
   .customize-control-kirki-color .kirki-color-input-wrapper.collapsed:not(.mode-hue) ~ .kirki-colorpicker-wrapper-palette,
   .customize-control-kirki-color .kirki-color-input-wrapper.collapsed:not(.mode-hue) ~ .kirki-colorpicker-wrapper-palette ~ .kirki-colorpicker-wrapper,
+  .customize-control-kirki-color .kirki-color-input-wrapper.collapsed:not(.mode-hue) ~ .kirki-colorpicker-wrapper ~ .kirki-colorpicker-wrapper-palette,
   .customize-control-kirki-color .kirki-color-input-wrapper.collapsed:not(.mode-hue) ~ .kirki-colorpicker-wrapper {
     display: none; }
   .customize-control-kirki-color .kirki-color-input-wrapper.collapsed:not(.mode-hue) .reset {
@@ -52,16 +53,16 @@
   .customize-control-kirki-color .kirki-color-input-wrapper.mode-hue .reset {
     display: none; }
 .customize-control-kirki-color .kirki-colorpicker-wrapper-palette {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, 18px);
-  grid-gap: 2px; }
+  display: flex;
+  margin-top: 12px; }
   .customize-control-kirki-color .kirki-colorpicker-wrapper-palette button {
-    width: 18px;
-    height: 18px;
-    border-radius: 50%;
-    line-height: 0;
-    display: block;
+    width: 100%;
     border: 1px solid rgba(0, 0, 0, 0.2);
-    box-shadow: none; }
+    box-shadow: none;
+    height: 20px;
+    margin-right: 4px;
+    border-radius: 3px; }
+    .customize-control-kirki-color .kirki-colorpicker-wrapper-palette button:last-child {
+      margin-right: none; }
 
 /*# sourceMappingURL=style.css.map */
