--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -50,6 +50,7 @@
 
       ~.kirki-colorpicker-wrapper-palette,
       ~.kirki-colorpicker-wrapper-palette~.kirki-colorpicker-wrapper,
+      ~.kirki-colorpicker-wrapper~.kirki-colorpicker-wrapper-palette,
       ~.kirki-colorpicker-wrapper {
         display: none;
       }
@@ -77,18 +78,20 @@
   }
 
   .kirki-colorpicker-wrapper-palette {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, 18px);
-    grid-gap: 2px;
+    display: flex;
+    margin-top: 12px;
 
     button {
-      width: 18px;
-      height: 18px;
-      border-radius: 50%;
-      line-height: 0;
-      display: block;
+      width: 100%;
       border: 1px solid rgba(0, 0, 0, .2);
       box-shadow: none;
+      height: 20px;
+      margin-right: 4px;
+      border-radius: 3px;
+
+      &:last-child {
+        margin-right: none;
+      }
     }
   }
 }
