--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -82,10 +82,10 @@
     margin-top: 12px;
 
     button {
-      width: 100%;
+      width: 28px;
       border: 1px solid rgba(0, 0, 0, .2);
       box-shadow: none;
-      height: 20px;
+      height: 28px;
       margin-right: 4px;
       border-radius: 3px;
 
