--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -15,6 +15,8 @@
     position: relative;
     overflow: hidden;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24); }
+    .customize-control-kirki-color .kirki-color-input-wrapper .toggle-colorpicker:focus {
+      box-shadow: 0 0 2px 2px rgba(30, 140, 190, 0.8); }
     .customize-control-kirki-color .kirki-color-input-wrapper .toggle-colorpicker .placeholder {
       display: block;
       width: 100%;
@@ -47,7 +49,8 @@
     background: none;
     border: none;
     box-shadow: none;
-    opacity: .5; }
+    opacity: .5;
+    cursor: pointer; }
   .customize-control-kirki-color .kirki-color-input-wrapper.mode-hue .toggle-colorpicker,
   .customize-control-kirki-color .kirki-color-input-wrapper.mode-hue input,
   .customize-control-kirki-color .kirki-color-input-wrapper.mode-hue .reset {
@@ -64,5 +67,7 @@
     border-radius: 3px; }
     .customize-control-kirki-color .kirki-colorpicker-wrapper-palette button:last-child {
       margin-right: none; }
+    .customize-control-kirki-color .kirki-colorpicker-wrapper-palette button:focus {
+      box-shadow: 0 0 2px 2px rgba(30, 140, 190, 0.8); }
 
 /*# sourceMappingURL=style.css.map */
