--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -20,6 +20,10 @@
       overflow: hidden;
       box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 
+      &:focus {
+        box-shadow: 0 0 2px 2px rgba(30, 140, 190, 0.8);
+      }
+
       .placeholder {
         display: block;
         width: 100%;
@@ -64,6 +68,7 @@
         border: none;
         box-shadow: none;
         opacity: .5;
+        cursor: pointer;
       }
     }
 
@@ -91,6 +96,10 @@
 
       &:last-child {
         margin-right: none;
+      }
+
+      &:focus {
+        box-shadow: 0 0 2px 2px rgba(30, 140, 190, 0.8);
       }
     }
   }
