--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -19,6 +19,7 @@
       position: relative;
       overflow: hidden;
       box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+      cursor: pointer;
 
       &:focus {
         box-shadow: 0 0 2px 2px rgba(30, 140, 190, 0.8);
@@ -75,7 +76,6 @@
     &.mode-hue {
 
       .toggle-colorpicker,
-      input,
       .reset {
         display: none;
       }
