--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -7,7 +7,7 @@
   flex-wrap: wrap;
   margin-top: 12px;
 }
-.customize-control-kirki-color .color-button-wrapper {
+.customize-control-kirki-color button {
   width: 35px;
   height: 35px;
   display: flex;
@@ -16,11 +16,14 @@
   transition: all 0.1s ease;
   border: 2px solid transparent;
   border-radius: 50%;
+  padding: 2px;
+  box-sizing: content-box;
+  background: transparent;
 }
-.customize-control-kirki-color .color-button-wrapper:hover, .customize-control-kirki-color .color-button-wrapper:focus {
+.customize-control-kirki-color button:hover, .customize-control-kirki-color button:focus {
   border-color: #777;
 }
-.customize-control-kirki-color .color-button-wrapper button {
+.customize-control-kirki-color button .button-inner {
   width: 28px;
   height: 28px;
   border: 1px solid rgba(0, 0, 0, 0.2);
@@ -33,18 +36,7 @@
   transition: all 0.1s ease;
   cursor: pointer;
 }
-.customize-control-kirki-color .color-button-wrapper button svg {
-  position: absolute;
-  top: 5px;
-  left: 5px;
-  opacity: 0;
-}
-.customize-control-kirki-color .color-button-wrapper button:hover, .customize-control-kirki-color .color-button-wrapper button:active, .customize-control-kirki-color .color-button-wrapper button:focus {
-  width: 32px;
-  height: 32px;
-  box-shadow: inset 0 0 0 16px;
-}
-.customize-control-kirki-color .color-button-wrapper button:after {
+.customize-control-kirki-color button .button-inner:after {
   content: "";
   position: absolute;
   top: 0;
@@ -54,12 +46,23 @@
   border-radius: 50%;
   box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.2);
 }
-.customize-control-kirki-color .color-button-wrapper button[aria-pressed=true] {
+.customize-control-kirki-color button svg {
+  position: absolute;
+  top: 6px;
+  left: 6px;
+  opacity: 0;
+}
+.customize-control-kirki-color button:hover .button-inner, .customize-control-kirki-color button:active .button-inner, .customize-control-kirki-color button:focus .button-inner {
+  width: 32px;
+  height: 32px;
+  box-shadow: inset 0 0 0 16px;
+}
+.customize-control-kirki-color button[aria-pressed=true] .button-inner {
   box-shadow: inset 0 0 0 5px;
   width: 32px;
   height: 32px;
 }
-.customize-control-kirki-color .color-button-wrapper button[aria-pressed=true] svg {
+.customize-control-kirki-color button[aria-pressed=true] svg {
   opacity: 1;
 }
 .customize-control-kirki-color summary {
@@ -73,9 +76,10 @@
   text-align: left;
   padding: 10px;
   cursor: pointer;
+  text-decoration: underline;
 }
 .customize-control-kirki-color summary input.kirki-color-control {
-  width: 100px;
+  width: auto;
   font-family: monospace;
   font-size: 12px;
   background: none;
