--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -98,7 +98,7 @@
     }
 
     input.kirki-color-control {
-      width: auto;
+      width: 100px;
       font-family: monospace;
       font-size: 12px;
       background: none;
