--- a/src/Control/style.css
+++ b/src/Control/style.css
@@ -1,35 +1,35 @@
-.customize-control-kirki-color .wp-picker-container {
+.customize-control .wp-picker-container {
   display: flex;
   flex-wrap: wrap;
 }
 
-.customize-control-kirki-color .wp-picker-holder {
+.customize-control .wp-picker-holder {
   width: 100%;
 }
 
-.customize-control-kirki-color .iris-picker {
+.customize-control .iris-picker {
   width: 100% !important;
 }
 
-.customize-control-kirki-color .iris-picker:not(.iris-only-strip) .iris-picker-inner {
+.customize-control .iris-picker:not(.iris-only-strip) .iris-picker-inner {
   display: flex;
 }
 
-.customize-control-kirki-color .iris-picker:not(.iris-only-strip) .iris-square {
+.customize-control .iris-picker:not(.iris-only-strip) .iris-square {
   width: 100% !important;
   margin-right: 0;
 }
 
-.customize-control-kirki-color .iris-picker:not(.iris-only-strip) .iris-slider {
+.customize-control .iris-picker:not(.iris-only-strip) .iris-slider {
   width: 24px !important;
   margin-left: 8px !important;
 }
 
-.customize-control-kirki-color .iris-palette-container {
+.customize-control .iris-palette-container {
   width: calc(100% - 77px) !important;
   display: flex;
 }
 
-.customize-control-kirki-color .iris-palette {
+.customize-control .iris-palette {
   width: 100% !important;
 }
